# veda

./: .gitignore  .gitlab-ci.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  install.sh  skill-fuse.md  skill.md
.github/workflows/: release.yml
config/: test.toml.example
crates/veda-cli/: Cargo.toml
crates/veda-cli/src/: client.rs  config.rs  init.rs  lib.rs  main.rs  status.rs  workspace.rs
crates/veda-core/: Cargo.toml
crates/veda-core/src/: checksum.rs  lib.rs  path.rs  store.rs
crates/veda-core/src/service/: collection.rs  fs.rs  mod.rs  search.rs
crates/veda-core/tests/: fs_service_test.rs  mock_store.rs  search_test.rs
crates/veda-fuse/: Cargo.toml
crates/veda-fuse/src/: cache.rs  client.rs  commit_queue.rs  fs.rs  inode.rs  lib.rs  main.rs  shadow.rs  sse.rs
crates/veda-fuse/tests/: binary_roundtrip.rs
crates/veda-pipeline/: Cargo.toml
crates/veda-pipeline/src/: chunking.rs  embedding.rs  extraction.rs  lib.rs  llm.rs  summary.rs
crates/veda-pipeline/tests/: chunking_test.rs  embedding_test.rs
crates/veda-server/: Cargo.toml
crates/veda-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  obs.rs  outbox.rs  reconciler.rs  state.rs  worker.rs
crates/veda-server/src/routes/: account.rs  collection.rs  events.rs  fs.rs  mod.rs  search.rs  sql.rs
crates/veda-server/tests/: events_retention_test.rs  large_file_streaming_test.rs  metrics_test.rs  reconciler_test.rs  server_test.rs  worker_atomic_test.rs
crates/veda-sql/: Cargo.toml
crates/veda-sql/src/: collection_table.rs  embedding_udf.rs  engine.rs  files_table.rs  fs_events_table.rs  fs_table.rs  fs_udf.rs  lib.rs  search_table.rs  storage_stats_table.rs
crates/veda-sql/src/format/: csv.rs  jsonl.rs  mod.rs  text.rs
crates/veda-sql/tests/: sql_test.rs
crates/veda-store/: Cargo.toml
crates/veda-store/src/: lib.rs  milvus.rs  mysql.rs
crates/veda-store/tests/: milvus_test.rs  mysql_test.rs
crates/veda-types/: Cargo.toml
crates/veda-types/src/: api.rs  errors.rs  lib.rs  types.rs
crates/veda-types/tests/: types_test.rs
deploy/: .env.example  Dockerfile  config.docker.toml.example  docker-compose.observability.yml  docker-compose.yml  prometheus.compose.yml  prometheus.yml
deploy/secrets/: .gitignore
deploy/systemd/: veda-migrate.service  veda-server.service  veda.env.example
docs/: PLANS.md  alpha-tryout.md  design.md  fs9-plan.md  local-test-sop.md  production-audit.md  review-2026-04-16-172119.md  review-2026-04-17-133829.md  review-2026-04-23-102047.md
docs/archive/: handoff-2026-05-15-alpha-closeout.md
docs/archive/reviews/: review-2026-04-17-145825.md  review-2026-04-17-153640.md  review-2026-04-17-153733.md  review-2026-04-22-154636.md
docs/design/: chunk-storage-research.md  cli-skill-design.md  design.md  fuse-overwrite-design.md  plans.md  simplify-v0.md
docs/plans/: 2026-04-24-fuse-top4-fixes.md  alpha-plan-2026-04-29.md  fuse-plan.md  fuse-writeback-plan.md
docs/reviews/: code-review.md  module-review-2026-04-29.md  review-2026-04-16-102556.md  review-2026-04-17-141917.md  review-2026-04-23-140605.md  review-2026-04-30-144340.md  review-2026-05-08-153403.md
docs/testing/: local-test-sop.md  manual-test-sop.md  test-sop.md
scripts/: release-darwin.sh  release.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/docs/en/: cli.md  fuse.md  introduction.md  quickstart.md  skill.md  troubleshooting.md
web/public/docs/zh/: cli.md  fuse.md  introduction.md  quickstart.md  skill.md  troubleshooting.md
web/src/: main.ts  style.css
