[workspace]
resolver = "2"
members = [
    "crates/veda-types",
    "crates/veda-core",
    "crates/veda-store",
    "crates/veda-pipeline",
    "crates/veda-sql",
    "crates/veda-server",
    "crates/veda-cli",
    "crates/veda-fuse",
]

[workspace.package]
# Bump this in lockstep with the next git tag. Captured into binaries via
# clap's #[command(version)] (CARGO_PKG_VERSION). Mismatch causes `veda
# --version` to lie. scripts/release.sh automates the bump.
version = "0.1.11"
edition = "2021"
license = "MIT"

[workspace.dependencies]
veda-types = { path = "crates/veda-types" }
veda-core = { path = "crates/veda-core" }
veda-store = { path = "crates/veda-store" }
veda-pipeline = { path = "crates/veda-pipeline" }
veda-sql = { path = "crates/veda-sql" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
