[package]
name = "veda-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "veda"
path = "src/main.rs"

[dependencies]
veda-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
