[package]
name = "veda-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veda-types.workspace = true
async-trait.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-normalization = "0.1"
