[package]
name = "veda-fuse"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "veda_fuse"
path = "src/lib.rs"

[[bin]]
name = "veda-fuse"
path = "src/main.rs"

[dependencies]
fuser = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
signal-hook = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
