[package]
name = "veda-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veda-types.workspace = true
veda-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
toml.workspace = true
tokio.workspace = true
