[package]
name = "veda-sql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veda-types.workspace = true
veda-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
datafusion = "53"
arrow = { version = "58", features = ["json"] }
arrow-csv = "58"
arrow-json = "58"

[dev-dependencies]
uuid.workspace = true
chrono.workspace = true
